Changed video bitrate calculation to use HandbrakeInterop rather than the core handbrake function, since hb_calc_bitrate is going away soon. Also added a function to predict file size and cleaned up control visibility for different video rate types.

--- a/VidCoder/App.xaml
+++ b/VidCoder/App.xaml
@@ -6,6 +6,8 @@
 		<converters:VisibilityConverter x:Key="VisibilityConverter" />
 		<converters:EnumBoolConverter x:Key="EnumBoolConverter" />
 		<converters:EnumBoolInverseConverter x:Key="EnumBoolInverseConverter" />
+		<converters:EnumVisibilityConverter x:Key="EnumVisibilityConverter" />
+		<converters:EnumVisibilityInverseConverter x:Key="EnumVisibilityInverseConverter" />
 		<converters:InverseBoolConverter x:Key="InverseBoolConverter" />
 		<converters:PercentDisplayConverter x:Key="PercentDisplayConverter" />
 		<converters:DoubleDisplayConverter x:Key="DoubleDisplayConverter" />
