--- a/VidCoder/App.xaml
+++ b/VidCoder/App.xaml
@@ -22,6 +22,7 @@
 			<Setter Property="BorderBrush" Value="#999999" />
 		</Style>
 
+		<SolidColorBrush x:Key="DisabledBrush" Color="#4C4C4C" />
 		<Style x:Key="LongToolTip" TargetType="TextBlock">
 			<Setter Property="Width" Value="400" />
 			<Setter Property="TextWrapping" Value="Wrap" />
