Replaced slider with a seek bar: makes it easier to skip around without having to grab a little slider control.

--- a/VidCoder/View/MainWindow.xaml
+++ b/VidCoder/View/MainWindow.xaml
@@ -293,6 +293,8 @@
 							Gesture="LeftDoubleClick"
 							Command="{Binding ToggleSourceMenuCommand}" />
 					</Grid.InputBindings>
+					
+					<!-- Hover effect -->
 					<Grid
 						Visibility="{Binding ScanningSource, Converter={StaticResource VisibilityConverter}, ConverterParameter=True}">
 						<Border
@@ -307,6 +309,8 @@
 							</Border.Background>
 						</Border>
 					</Grid>
+					
+					<!-- Selected effect -->
 					<Border
 						BorderBrush="DarkBlue" CornerRadius="3"
 						BorderThickness="1"
