--- a/VidCoder/View/PreviewWindow.xaml
+++ b/VidCoder/View/PreviewWindow.xaml
@@ -1,6 +1,7 @@
 ﻿<Window x:Class="VidCoder.View.PreviewWindow"
 	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+	xmlns:controls="clr-namespace:VidCoder.Controls"
 	Title="{Binding Title}"
 	Width="864" Height="514"
 	MinWidth="300" MinHeight="200"
@@ -39,7 +40,7 @@
 				Source="{Binding PreviewImage}"
 				Visibility="{Binding HasPreview, Converter={StaticResource VisibilityConverter}}"/>
 			<Grid
-				Name="previewControls" Margin="6,0,6,6" Height="66" VerticalAlignment="Bottom">
+				Name="previewControls" Margin="6,0,6,6" Height="71" VerticalAlignment="Bottom">
 				<Grid.Style>
 					<Style TargetType="Grid">
 						<Style.Triggers>
@@ -60,16 +61,12 @@
 					</Style>
 				</Grid.Style>
 				<Border CornerRadius="10" Background="#111" Opacity="0.9" />
-				<Slider
-					Height="22" Margin="10,8,10,0" VerticalAlignment="Top"
-					TickPlacement="BottomRight"
-					Minimum="0"
-					Maximum="{Binding SliderMax}"
-					TickFrequency="1"
-					IsSnapToTickEnabled="True"
-					IsEnabled="{Binding SliderEnabled}"
-					FocusVisualStyle="{x:Null}"
-					Value="{Binding SelectedPreview}" />
+				<controls:SeekBar
+					Height="24" Margin="10,8,10,0" VerticalAlignment="Top"
+					Slot="{Binding SelectedPreview, Mode=TwoWay}"
+					NumSlots="{Binding PreviewCount, Mode=OneWay}"
+					IsEnabled="{Binding SeekBarEnabled}"
+					/>
 				<StackPanel
 					Orientation="Horizontal" Margin="0,0,0,8" VerticalAlignment="Bottom" HorizontalAlignment="Center"
 					Visibility="{Binding GeneratingPreview, Converter={StaticResource VisibilityConverter}, ConverterParameter=True}">
